src/prompts/snapshots/promptuity__prompts__confirm__tests__default_enter.snap
---
source: src/prompts/confirm.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(raw): [38;5;8m○[39m Yes  /  [38;5;10m●[39m No
body(none):
---
state: Submit
input(raw): No
body(none):
